add fonts + gulp

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,9 @@
+@import 'roboto-fontface';
+@import '../fonts/material-design-icons/material-icons.css';
+@import '../fonts/font-awesome/css/font-awesome.css';
+
+@import 'normalize';
+
 body{
     background: lightpink;
 }
